client/src/pages/DailyView.css
/* DailyView.css */
.daily-view-screen {
    font-family: 'Poppins', sans-serif;
    justify-content: center;
    align-items: center;
    height: 100vh;
    background-color: #189ab4;
    color: white;
    text-align: center;
    padding: 20px;
    display: flex;
    flex-direction: column;
}

.back-button {
    padding: 10px;
    font-size: medium;
    min-width: 200px;
    background-color: white;
    color: #189ab4;
    border: none;
    border-radius: 4px;
    margin-bottom: 40px;
    cursor: pointer;
    transition: background-color 0.3s;
}

.back-button:hover {
    background-color: #0f7b8e;
    color: white;
}

.daily-view-content {
    width: 100%;
    max-width: 600px;
}

.daily-view-content h1 {
    font-size: 24px;
    margin-bottom: 20px;
}

.emoji {
    font-size: 100px;
    margin: 20px 0;
}

.notes {
    font-size: 18px;
    color: white;
    margin-top: 20px;
}

.intensity {
    font-size: 18px;
    color: #ddd;
    margin-top: 10px;
}

.edit-button,
.delete-button {
    margin-top: 10px;
    margin-right: 10px;
    padding: 10px;
    font-size: medium;
    min-width: 150px;
    background-color: white;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    transition: background-color 0.3s;
}

.edit-button {
    color: #189ab4;
}

.delete-button {
    color: #DB1F48;
}

.edit-button:hover {
    background-color: #0f7b8e;
    color: white;
}

.delete-button:hover {
    background-color: #E7625F;
    color: white;
}

body.light {
    background-color: white;
    color: black;
}

/* Global styles for dark mode */
body.dark {
    background-color: #333;
    color: white;
}

.daily-view-screen.light {
    background-color: #189ab4;
    color: black;
}

.daily-view-screen.dark {
    background-color: #333 !important;
    color: white !important;
}

